--- a/DemoSampleWebApp/wwwroot/Grid.html
+++ b/DemoSampleWebApp/wwwroot/Grid.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-grid/4.6.3/ui-grid.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-grid/4.6.3/ui-grid.min.css" type="text/css">
-    <script src="Scripts/Demo.js"></script>
+    <script src="Scripts/Crud.js"></script>
     <style>
         p, div {
             font: 15px Verdana;
@@ -18,10 +18,10 @@
         }
     </style>
 </head>
-
 <body ng-app="newApp">
     <div ng-controller="newController">
-        <div class="uiGrd" id="grd" ui-grid="gridData"></div>
+        <div class="uiGrd" ui-grid="gridData">
+        </div>
     </div>   
 </body>
 </html>
